--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
     <div class="top1">
       <div class="w">W.</div>
       <div class="top">
@@ -123,6 +124,7 @@
           </p>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
